--- a/src/component/OpenModalButton/OpenModalButton.module.css
+++ b/src/component/OpenModalButton/OpenModalButton.module.css
@@ -12,18 +12,6 @@
   bottom: 5px;
   transform: translateX(50%);
 }
-.buttonOverlay {
-  content: '';
-  display: block;
-  position: fixed;
-  z-index: 1;
-  background-color: rgba(40, 64, 96, 0.65);
-  box-shadow: 0px -10px 30px 0px rgba(119, 119, 119, 0.1);
-  height: 42px;
-  left: 0;
-  bottom: 0;
-  width: 320px;
-}
 .bg { background-color: rgb(40, 64, 96); opacity: 0.651; box-shadow: 0px -10px 30px 0px rgba(119, 119, 119, 0.1); position: absolute; left: 0px; top: 526 px; width: 320px; height: 42px; z-index: 105; }
 
 .buttonOpenModal:hover {
@@ -44,7 +32,20 @@
   background-color: rgba(40, 64, 96, 0.651);
   box-shadow: 0px -10px 30px 0px rgba(119, 119, 119, 0.1);
 }
-
+@media (max-width: 767px) {
+  .buttonOverlay {
+    content: '';
+    display: block;
+    position: fixed;
+    z-index: 1;
+    background-color: rgba(40, 64, 96, 0.65);
+    box-shadow: 0px -10px 30px 0px rgba(119, 119, 119, 0.1);
+    height: 42px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+  }
+}
 @media (min-width: 768px) {
   .buttonOpenModal {
     right: 45px;
