--- a/src/globalStyles.module.css
+++ b/src/globalStyles.module.css
@@ -1,7 +1,54 @@
 html {
     box-sizing: border-box;
 }
+::-webkit-scrollbar {
+    width: 8px; 
+    height: 8px;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #284060;
+    border-radius: 9em;
+    box-shadow: inset 1px 1px 10px #f3faf7;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #3a5374;
+}
+::-webkit-scrollbar-button:vertical:start:decrement {
+    background: linear-gradient(120deg, #284060 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(240deg, #284060 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(0deg, #284060 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: #f6f8f4;
+    border-radius: 4px;
+}
 
+::-webkit-scrollbar-button:vertical:end:increment {
+    background:
+        linear-gradient(300deg, #284060 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(60deg, #284060 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(180deg, #284060 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: #f6f8f4;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-button:horizontal:start:decrement {
+    background:
+        linear-gradient(30deg, #284060 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(150deg, #284060 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(270deg, #284060 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: #f6f8f4;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-button:horizontal:end:increment {
+    background:
+        linear-gradient(210deg, #284060 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(330deg, #284060 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(90deg, #284060 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: #f6f8f4;
+    border-radius: 4px;
+}
 *,
 *::before,
 *::after {
