reverse transaction list + fix style into home list

--- a/src/component/Home/HomeTable/HomeTable.module.css
+++ b/src/component/Home/HomeTable/HomeTable.module.css
@@ -80,7 +80,7 @@
     width: inherit;
     padding: 0px 8px 0px 22px;
     margin-bottom: 0px;
-    height: 62px;
+
   }
 
   /** нечетное */
@@ -92,13 +92,16 @@
   .financeMobItem:nth-of-type(even) {
     background-color: #f3f6f6;
   }
-
+  .financeMobItem:first-child {
+    height: 116px;
+  }
   .financeMobItem:not(:first-child) .financeMobTitle {
     display: none;
   }
 
   .financeMobItem:not(:first-child) {
     align-items: center;
+    height: 62px;
   }
 
   .financeMobItemIncome {
@@ -112,22 +115,17 @@
   .financeMobItem:last-child {
     margin-bottom: 0px;
   }
-  .financeMobRow:nth-child(4) {
-    overflow-y: auto;
-    max-height: 100%;
-    padding-left: 0;
-  }
-  .financeMobItem:first-child .financeMobRow:nth-child(4) {
-    overflow-y: inherit;
-  }
+
   .financeMobRow {
     display: flex;
     flex-direction: column;
     width: 120px;
     padding: 0px;
-    
   }
-
+  .financeMobRow:nth-child(4) {
+    overflow-y: auto;
+    max-height: 100%;
+  }
   .financeMobRow:nth-of-type(-n + 2) {
     width: 106px;
   }
