--- a/src/component/TransactionForm/TransactionForm.module.css
+++ b/src/component/TransactionForm/TransactionForm.module.css
@@ -1,7 +1,9 @@
 .form {
   display: flex;
   flex-direction: column;
-  width: 320px;
+  min-width: 320px;
+  width: 100vw;
+  height: 100%;
 }
 
 .formHeader {
@@ -33,6 +35,13 @@
   font-size: 12px;
   line-height: 40px;
   padding-left: 40px;
+}
+
+.contenWrapper {
+  width: 320px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .radioGroup {
@@ -196,6 +205,10 @@ select:focus {
 }
 
 .formFooter {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   height: 70px;
   background-color: #738397;
   display: flex;
@@ -205,6 +218,7 @@ select:focus {
 
 .buttonAddTransaction {
   composes: select;
+  width: 280px;
   font-size: 15px;
   border: none;
   margin-bottom: 0;
@@ -219,6 +233,11 @@ select:focus {
 }
 
 @media (min-width: 768px) {
+  .form {
+    width: 320px;
+    height: auto;
+  }
+
   .formHeader {
     background-color: #fff;
     margin-bottom: 40px;
