--- a/src/component/Home/HomeTable/HomeTable.module.css
+++ b/src/component/Home/HomeTable/HomeTable.module.css
@@ -126,6 +126,10 @@
     overflow-y: auto;
     max-height: 100%;
   }
+  .financeMobRow:nth-child(4)::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
   .financeMobRow:nth-of-type(-n + 2) {
     width: 106px;
   }
