--- a/src/component/Home/HomeTable/HomeTable.module.css
+++ b/src/component/Home/HomeTable/HomeTable.module.css
@@ -124,7 +124,6 @@
     width: 120px;
     height: 100%;
     padding: 0px;
-    padding-right: 10px;
   }
   .financeMobRow:nth-of-type(-n + 2) {
     width: 106px;
@@ -158,7 +157,6 @@
     line-height: 2.727;
     background-color: inherit;
     padding: 12px 0px;
-    margin-right: -10px;
   }
 
   .financeMobDate {
@@ -170,8 +168,8 @@
     max-height: 100%;
   }
   .financeMobRow:nth-child(4) .financeMobDate::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
+    width: 4px;
+    height: 4px;
   }
 }
 
@@ -184,6 +182,22 @@
 
   .financeMobList {
     min-width: 856px;
+    max-height: 600px;
+    overflow-y: auto;
+  }
+  .financeMobList::-webkit-scrollbar {
+    width: 6px;
+  }
+  .financeMobList::-webkit-scrollbar-thumb {
+    background-color: #f2eaf0;
+    box-shadow: none;
+  }
+  .financeMobList::-webkit-scrollbar-track {
+    background-color: #f2eaf0;
+  }
+  .financeMobList:hover::-webkit-scrollbar-thumb {
+    background-color: #3a5374;
+    box-shadow: inset 1px 1px 10px #f3faf7;
   }
 
   .financeMobItem {
