--- a/src/component/FormSignIn/SignIn.module.css
+++ b/src/component/FormSignIn/SignIn.module.css
@@ -10,7 +10,7 @@
   border-bottom: 1px solid rgb(166, 177, 181);
 }
 .modal{
-  width: 100vh;
+  width: 100vw;
 }
 .formContainer{
   height: 350px;
